<resources>

    <string name="app_name">WinIt</string>
    <string name="slogan">
<![CDATA[
            <b>Discover</b> and <b>win</b> promotions
        ]]>
    </string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_old">Old Password</string>
    <string name="log_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="empty_fields">Please fill in all fields</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="owner">Owner</string>
    <string name="dashboard">Dashboard</string>
    <string name="single_player">Single Player</string>
    <string name="cooperative">Cooperative</string>
    <string name="competitive">Competitive</string>
    <string name="selected_promotion_to_send">Select promotion to trade</string>
    <string name="trading">Trading</string>
    <string name="promotions">Promotions</string>
    <string name="profile">Profile</string>
    <string name="promotion">Promotion</string>
    <string name="end_date">End Date</string>
    <string name="win_points">Win Points</string>
    <string name="my_promotions">My Promotions</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset your password!</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="prom_sample">Promotion X</string>
    <string name="test">test</string>
    <string name="edit">Edit</string>
    <string name="badges">Badges</string>
    <string name="play">Play</string>
    <string name="propose_trade">Propose Trade</string>
    <string name="send_proposal">Send proposal</string>
    <string name="tags">Tags</string>
    <string name="dialog_propose_trade">Do you want to propose this trade?</string>
    <string name="dialog_recive_trade">wants to trade a promotion with you</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="you">You</string>
    <string name="cancel">Cancel</string>
    <string name="unlocked">Unlocked: </string>
    <string name="share">Share</string>
	<string name="my_promotions">My Promotions</string>
    <string name="sticky_item">Sticky</string>
    <string name="quick_return_item">Quick Return</string>
    <string name="page">Page</string>
    <string name="cancel">Cancel</string>
    <string name="redeem">Redeem</string>
    <string name="trade">Trade</string>
    <string name="show">Show</string>
    <string name="app_id">104075696465886</string>

    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="loading">Loading&#8230;</string>
    
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="answer_proposal">Answer proposal</string>
    <string name="choose_to_do_with_the_proposal">Choose what to do with the proposal.</string>
    <string name="ok">OK</string>
    
    <string name="profile_successfully_updated">Profile successfully updated.</string>
    <string name="promotion_successfully_exchanged">Promotion successfully exchanged.</string>
    <string name="proposal_successfully_revoked">Proposal successfully revoked.</string>
    <string name="an_error_has_occured">An error has occurred.</string>
    <string name="revoke_sent_proposal">Revoke sent proposal?</string>
    <string name="revoke">Revoke</string>
    <string name="you_will_lose_the_opportunity_to_trade_your_promotion">You\'ll lose the opportunity to trade your promotion.</string>
    
    <string name="no_proposals">No proposals</string>
    <string name="no_internet_connection">No Internet connection</string>
</resources>