<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/thumbnailBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <pt.techzebra.winit.staggeredgridview.ScaleImageView
            android:id="@+id/badge_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <TextView
        android:id="@+id/badge_popup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/thumbnailBadge"
        android:fontFamily="sans-serif"
        android:text="@string/badges"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="5dp" />

    <View
        android:id="@+id/separator_list_row"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/badge_popup_name"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/thumbnailBadge"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:id="@+id/badge_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator_list_row"
        android:layout_toRightOf="@+id/thumbnailBadge"
        android:layout_marginRight="5dp" >

        <TextView
            android:id="@+id/badge_popup_unlocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/unlocked"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/badge_popup_unlocked_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textIsSelectable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/badge_description_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:textSize="14sp"
        android:textIsSelectable="true"
        android:layout_below="@+id/badge_info" />

    <LinearLayout
        android:id="@+id/thumbnailBadgeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/badge_share_button"
            style="@style/WhiteButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/peter_river"
            android:fontFamily="sans-serif"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
             />
    </LinearLayout>

</RelativeLayout>