<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Left side Thumbnail image -->

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" >

        <pt.techzebra.winit.staggeredgridview.ScaleImageView
            android:id="@+id/list_image"
            android:layout_width="150dip"
            android:layout_height="fill_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            />

        <View
            android:id="@+id/separator_list_row"
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:background="@color/dark_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap"
            android:layout_marginRight="@dimen/gap"
            android:fontFamily="sans-serif"
            android:text="@string/promotion"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/list_item_end_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/gap"
                android:layout_marginRight="@dimen/gap"
                android:fontFamily="sans-serif"
                android:text="@string/end_date"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_item_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22-10-2013"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/list_item_win_points_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/gap"
                android:layout_marginRight="@dimen/gap"
                android:fontFamily="sans-serif"
                android:text="@string/win_points"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_item_win_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5000"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>