<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clouds"
    android:orientation="vertical"
    android:paddingTop="@dimen/gap2"
    android:paddingLeft="@dimen/gap2"
    android:paddingRight="@dimen/gap2"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/single_player_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:onClick="handleRoomSelection"
        android:layout_marginBottom="@dimen/gap2"
        android:background="@color/peter_river" >

        <pt.techzebra.winit.widget.FixedAspectRatioImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:contentDescription=""
            android:src="@drawable/ic_single_player"
            android:background="@color/belize_hole" />

        <TextView
            android:id="@+id/single_player_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:text="@string/single_player"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/gap2" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/cooperative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:onClick="handleRoomSelection"
        android:layout_marginBottom="@dimen/gap2"
        android:background="@color/orange" >

        <pt.techzebra.winit.widget.FixedAspectRatioImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:contentDescription=""
            android:src="@drawable/ic_cooperative"
            android:background="@color/carrot"  />

        <TextView
            android:id="@+id/cooperative_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:text="@string/cooperative"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/gap2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/competitive_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:onClick="handleRoomSelection"
        android:layout_marginBottom="@dimen/gap2"
        android:background="@color/alizarin" >

        <pt.techzebra.winit.widget.FixedAspectRatioImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:contentDescription=""
            android:src="@drawable/ic_competitive"
            android:background="@color/pomegranate"  />

        <TextView
            android:id="@+id/competitive_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:text="@string/competitive"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/gap2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trading_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:onClick="handleRoomSelection"
        android:layout_marginBottom="@dimen/gap2"
        android:background="@color/emerland" >

        <pt.techzebra.winit.widget.FixedAspectRatioImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:contentDescription=""
            android:src="@drawable/ic_trading"
            android:background="@color/nephritis"  />

        <TextView
            android:id="@+id/trading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:text="@string/trading"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/gap2" />
    </LinearLayout>

</LinearLayout>